--- a/styles/style.css
+++ b/styles/style.css
@@ -38,8 +38,20 @@ body
     color:#676767;
 }
 
-.content 
+#content 
 {
     width:960px;
     margin: auto;
+}
+
+#footer
+{
+    clear:both;
+	color:#fff;
+	height:auto;
+	margin:auto;
+	padding:10px;
+	width:960px;
+	background:#000;
+	margin-bottom:10px;
 }
