add login form style

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,3 +78,24 @@ table caption{font-weight:bold; margin-bottom: 5px;}
 table th {background-color:#E5E5E5; border:1px solid #BBBBBB; padding:3px 6px; font-weight:normal; color:#000;}
 table tr td {border:1px solid #DDDDDD; padding:5px 6px;}
 table tr:hover {background-color:#F0F0F0; color:#000;}
+
+#login
+{
+    width: 60%;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    background:#ddd;
+    border: 1px solid #676767;
+    text-align: center;
+}
+#login form
+{
+    padding:10px;
+    margin:auto;
+}
+#login label
+{
+    float:none;
+    width:40px;
+}
