--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ label
 	width:80px;
 }
 
-table {width:98%; border:1px solid #DDDDDD; font-size:18px; color:#000;background:#fff;  margin: auto; text-align:center; margin-bottom:10px;}
+table {width:98%; border:1px solid #DDDDDD; font-size:18px; color:#000;background:#fff;  margin: auto; text-align:center; margin-bottom:50px;margin-top: 50px;}
 table caption{font-weight:bold; margin-bottom: 5px;}
 table th {background-color:#E5E5E5; border:1px solid #BBBBBB; padding:3px 6px; font-weight:normal; color:#000;}
 table tr td {border:1px solid #DDDDDD; padding:5px 6px;}
